09 Admin/App Data/Noctyrium/Diagnostics/noctyrium_productivity_source_of_truth_patch.2026-05-01_14-58-12.txt
===== NOCTYRIUM PRODUCTIVITY SOURCE OF TRUTH PATCH =====
Version remains locked: v0.03.01

Swift backup:
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.before-productivity-source-of-truth.2026-05-01_14-58-12.swift

===== PRECHECK COMPILE =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:961:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2443:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3074:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3078:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Current source compiles.

===== PATCHING SWIFT =====

===== NORMALIZING CURRENT ACTIVE DAY BACK TO TODAY =====
Active study day reset to: 2026-05-01

===== COMPILE TEST =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:417:17: error: cannot find 'nowStamp' in scope
            csv(nowStamp())
                ^~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1073:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2555:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3208:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3212:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Compile failed. Restoring backup.
Restored: /Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.before-productivity-source-of-truth.2026-05-01_14-58-12.swift
Report: /Users/jd/Medical School/09 Admin/App Data/Noctyrium/Diagnostics/noctyrium_productivity_source_of_truth_patch.2026-05-01_14-58-12.txt
